force-app/main/default/objects/vlocity_ins__GroupClass__c/vlocity_ins__GroupClass__c.object-meta.xml
<CustomObject>
    <description>Group Class identifies a group of members that will all receive similar benefits, when different classes of members receive different benefits. Example classes may include Executives, Union and Office workers. Master-detail child object of an Employer/Group Account.</description>
    <label>Group Class</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>