force-app/main/default/objects/vlocity_ins__GroupClass__c/fields/vlocity_ins__ClassCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClassCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>