force-app/main/default/objects/vlocity_ins__GroupClass__c/fields/vlocity_ins__GroupName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupName__c</fullName>
    <description>Name of group associated with group class.</description>
    <formula>vlocity_ins__GroupId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>